--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -3,6 +3,7 @@
   "robotLength": 0.9017,
   "holonomicMode": true,
   "pathFolders": [
+    "TwoNoteCenter",
     "Test"
   ],
   "autoFolders": [],
